Bug 2054565: Leave keystrokes that carry no Command modifier to native windows that have focus on macOS. r=mac-reviewers,mstange

The Edit > Delete menu item carries the forward delete key as its shortcut, with no modifiers, because it is wired to the XUL key element with keycode="VK_DELETE". Since bug 2036608 the item's action is delete: with no target, so it travels the macOS responder chain, and since bug 2040851 the item is always enabled. While a native window such as an NSSavePanel sheet has focus, AppKit therefore matches the forward delete key against our menu item and performs delete: instead of leaving the keystroke alone. The panel's filename field reads delete: as "delete the current selection", so with a collapsed caret nothing happens at all and the keystroke is spent.

Native text fields read keys that arrive without a Command modifier as plain editing or navigation keys, so leave those keys to the window that has focus. Shortcuts that include Command are still handled here, which is what lets native fields respond to Command+C/V/X/Z/A.

Differential Revision: https://phabricator.services.mozilla.com/D316554